Use Java 17
- Remove warnings
- Add test for protocol param